add route /qrcode
