# dto/qrcode.go
@@ -1,0 +1,7 @@
+package dto
+
+type QRCodeImagesURL struct {
+	QueryProdInfoURL string `json:"query_prod_info_url"`
+	QueryLogisticsRecordURL string`json:"query_logistics_record_url"`
+	UpdateLogisticsStatusUrl string `json:"update_logistics_status_url"`
+}
